# example-monorepo

./: README.md
.github/workflows/: release-windows.yml
apps/myapp/: README.md  pyproject.toml
apps/myapp/app/: __main__.py
apps/myapp/myapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
